<resources>
    <string name="app_name">Maze Game</string>
    <string name="stage_list">Select a stage</string>
    <string name="stage1">Stage 1</string>
    <string name="stage2">Stage 2</string>
    <string name="restart_button">Restart</string>
    <string name="undo_button">Undo</string>
    <string name="sound_effect_checkbox">Sound Effect</string>
    <string name="save_game">Save</string>
    <string name="load_game">Load</string>
    <string name="show_solution">Show Solution</string>
    <string name="goal_count">Goal Count: %1$d</string>
    <string name="roc_model">Roc Model</string>
    <string name="roc_activity_name">Maze Game in Roc Huang\'s Model</string>
    <string name="cannot_move">You can only move forward, leftward, or rightward to the piece which is in the same colour or same shape while it is in the same row or same column.</string>
</resources>
