<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/maze_game"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/lbl_select_stage"
        android:layout_width="165dp"
        android:layout_height="37dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/stage_list"
        android:textAlignment="center"
        android:textColor="#009688"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.065"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btn_undo"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/undo_button"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn_stage1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/button"
        tools:text="@string/undo_button" />

    <Button
        android:id="@+id/btn_stage2"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_marginStart="8dp"
        android:text="@string/stage2"
        app:layout_constraintStart_toEndOf="@+id/btn_stage1"
        app:layout_constraintTop_toBottomOf="@+id/lbl_select_stage"
        tools:text="@string/stage2" />

    <Button
        android:id="@+id/btn_stage1"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:clickable="true"
        android:onClick="onClickStage1"
        android:text="@string/stage1"
        app:layout_constraintStart_toStartOf="@+id/lbl_select_stage"
        app:layout_constraintTop_toBottomOf="@+id/lbl_select_stage"
        tools:text="@string/stage1" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="374dp"
        android:layout_height="511dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_restart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_stage2"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btn_restart"
        android:layout_width="165dp"
        android:layout_height="42dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="4dp"
        android:text="@string/restart_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="@string/restart_button" />

    <CheckBox
        android:id="@+id/cb_sound_effect"
        android:layout_width="172dp"
        android:layout_height="34dp"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="8dp"
        android:checked="true"
        android:clickable="true"
        android:text="@string/sound_effect_checkbox"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/lbl_select_stage"
        app:layout_constraintTop_toTopOf="@+id/lbl_select_stage" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_marginStart="16dp"
        android:text="@string/save_game"
        app:layout_constraintStart_toEndOf="@+id/btn_stage2"
        app:layout_constraintTop_toBottomOf="@+id/lbl_select_stage" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="399dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="165dp"
        android:layout_height="42dp"
        android:text="@string/load_game"
        app:layout_constraintBottom_toBottomOf="@+id/btn_restart"
        app:layout_constraintStart_toStartOf="@+id/tableLayout"
        app:layout_constraintTop_toTopOf="@+id/btn_restart"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>